<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f8e9">

    <TextView
        android:id="@+id/text_view_character_detail"
        android:layout_width="179dp"
        android:layout_height="28dp"
        android:layout_marginTop="120dp"
        android:background="@color/white"
        android:text="@string/vocabulary"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_input_character_detail"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:hint="@string/character_example"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_character_detail"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/text_view_Pinyin_detail"
        android:layout_width="179dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:text="@string/pronunciation"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_character_detail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_input_pinyin_detail"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:hint="@string/l_zi"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_Pinyin_detail" />

    <TextView
        android:id="@+id/text_view_english_detail"
        android:layout_width="179dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:text="@string/definition"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_pinyin_detail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_input_english_detail"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:hint="@string/example"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_english_detail"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_save_detail"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/save"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_english_detail"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_delete_detail"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/delete"
        android:textAlignment="center"
        android:drawableStart="@drawable/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_cancel_detail" />

    <Button
        android:id="@+id/button_cancel_detail"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:drawableStart="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>