<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/f_a_button_add_card"
        android:layout_width="55dp"
        android:layout_height="58dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/add_new_card"
        android:src="@android:drawable/ic_input_add"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@android:color/white"
        tools:ignore="ImageContrastCheck" />

    <FrameLayout
        android:id="@+id/frame_card_list"
        android:layout_width="409dp"
        android:layout_height="576dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/f_a_button_add_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/divider_card_list"
            android:layout_width="406dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_card_list"
            android:layout_width="match_parent"
            android:layout_height="593dp"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager" />

    </FrameLayout>

    <Button
        android:id="@+id/button_study_time"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:drawableEnd="@drawable/right_arrow"
        android:text="@string/study_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_card_list"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_view_character_fcl"
        android:layout_width="106dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="52dp"
        android:text="@string/vocabulary"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/text_view_pinyin_fcl"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_description_fcl"
        android:layout_width="106dp"
        android:layout_height="26dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:text="@string/definition"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_pinyin_fcl"
        android:layout_width="125dp"
        android:layout_height="26dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:text="@string/pronunciation"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/text_view_description_fcl"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>