<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/recycler_character"
        android:layout_width="116dp"
        android:layout_height="45dp"
        android:layout_marginTop="0dp"
        android:text="@string/textview"
        android:background="@color/blue_200"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/recycler_pinyin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/character" />

    <TextView
        android:id="@+id/recycler_pinyin"
        android:layout_width="154dp"
        android:layout_height="45dp"
        android:background="@color/blue_200"
        android:gravity="center"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/recycler_translation"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/pinyin" />

    <TextView
        android:id="@+id/recycler_translation"
        android:layout_width="141dp"
        android:layout_height="45dp"
        android:layout_marginTop="0dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:background="@color/blue_200"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="translation" />

    <View
        android:id="@+id/dvider_list_card"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_pinyin" />
</androidx.constraintlayout.widget.ConstraintLayout>